04-kub-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kub-base-service
spec:
  selector:
    app: kub-base-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
